package com.lab111.labwork2;

/**
 * C13 implements If3
 * @see If3
 * @author Dima Lytvyniuk
 */
public class C13 implements If3 {
	/**
	 * Create new object
	 */
	public C13() {
		
	}

	/**
	 * Method from interface If3 print: C13: meth3()
     * @see If3
	 */
	@Override
	public void meth3() {
		System.out.println("C13: meth3()");
	}
}
